...
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="invitations_icon">📩</string>
    <string name="response">📥</string>
    <string name="settings_icon">⚙</string>
    <string name="add">ADD</string>
    <string name="name">Person Name</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pop">This is a popup window.</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="description">Description</string>
    <string name="_settings">Settings</string>
    <string name="_invitations">Invitations</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? <b>Register here.</b></string>
    <string name="login">Login</string>
    <string name="login_to_your_existing_account">Login to your existing account.</string>
    <string name="forgot_password">Forgot password? <b>Click here.</b></string>
    <string-array name="class_array">
        <item>freshman</item>
        <item>sophomore</item>
        <item>junior</item>
...
    <string name="post">Post New Invitation</string>
    <string name="address">Enter address</string>
    <string name="max_price">Max Price</string>
    <string name="min_price">Min Price</string>
    <string name="price">Price</string>
    <string name="set_range_for_price">Set range for price</string>
    <string name="deadline">Deadline (MM/DD/YYYY)</string>
    <string name="bath_num">Bathroom Number</string>
    <string name="bed_num">Bedroom Number</string>
    <string name="submit">Submit</string>
    <string name="spots">Number of Spots Left</string>
    <string name="roommate">Roommates Capacity</string>
    <string name="dismiss">Dismiss</string>
    <string name="invitation_details">Invitation Details</string>
</resources>
